working on some new grid tools, grid of cross-sections following stream segments

--- a/notebooks/Tst_DEM_Query.ipynb
+++ b/notebooks/Tst_DEM_Query.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from nldi_xstool.dem_query import query_dems"
+    "from nldi_xstool.ancillary import queryDEMs"
    ]
   },
   {
@@ -40,7 +40,7 @@
     }
    ],
    "source": [
-    "query_dems('point', [(-96, 39)])"
+    "queryDEMs('point', [(-96, 39)])"
    ]
   },
   {
@@ -73,7 +73,7 @@
     }
    ],
    "source": [
-    " query_dems('line', [(-96.0001, 39), (-96, 39)])"
+    " queryDEMs('line', [(-96.0001, 39), (-96, 39)])"
    ]
   },
   {
@@ -106,7 +106,7 @@
     }
    ],
    "source": [
-    "query_dems('polygon', [(-96.0008, 39), (-96, 39), ( -96, 39.0008)])"
+    "queryDEMs('polygon', [(-96.0008, 39), (-96, 39), ( -96, 39.0008)])"
    ]
   },
   {
@@ -116,12 +116,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query_dems('point', [( -103.801229, 40.268322)])"
+    "queryDEMs('point', [( -103.801229, 40.268322)])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "23054384",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -129,8 +130,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python392jvsc74a57bd033fd6611e902258d9fc11e5d50f6ae17f2c8550f72c9a6a9a72f163ce7110a39",
-   "display_name": "Python 3.9.2 64-bit ('nldi_xstool': conda)"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
