--- a/notebooks/NOAA_SRC_Demo_2021_18_02.ipynb
+++ b/notebooks/NOAA_SRC_Demo_2021_18_02.ipynb
@@ -1325,8 +1325,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python386jvsc74a57bd033fd6611e902258d9fc11e5d50f6ae17f2c8550f72c9a6a9a72f163ce7110a39",
-   "display_name": "Python 3.8.6 64-bit ('nldi_xstool': conda)"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1338,7 +1339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
