--- a/notebooks/testngvd2navd.ipynb
+++ b/notebooks/testngvd2navd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 3,
    "id": "3f9d2c88-a3f6-4a82-847d-7014c13e6de0",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "id": "e4d5e616-6e5e-4b7c-a2ff-3a6ba2f69644",
    "metadata": {},
    "outputs": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "id": "803e72fa-6ede-4381-9645-65528d50fb5b",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
        "'N381330'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 8,
    "id": "7ffb9518-0065-45a4-9392-5753dbb39e23",
    "metadata": {},
    "outputs": [],
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 9,
    "id": "25093c8a-968f-4b9d-9943-63963c72eb00",
    "metadata": {},
    "outputs": [
@@ -262,7 +262,7 @@
        " 'outVertDatum': 'NAVD88'}"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 10,
    "id": "8dd42a03-19b1-49b0-a466-50165118d8fd",
    "metadata": {},
    "outputs": [
@@ -281,7 +281,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'ID': '1620693787140', 'nadconVersion': '5.0', 'vertconVersion': '3.0', 'srcDatum': 'NAD27', 'destDatum': 'NAD83(2011)', 'srcVertDatum': 'NGVD29', 'destVertDatum': 'NAVD88', 'srcLat': '38.2250000000', 'srcLatDms': 'N381330.00000', 'destLat': '38.2250061349', 'destLatDms': 'N381330.02209', 'deltaLat': '0.681', 'sigLat': '0.002757', 'sigLat_m': '0.0850', 'srcLon': '-104.2602777778', 'srcLonDms': 'W1041537.00000', 'destLon': '-104.2608026762', 'destLonDms': 'W1041538.88963', 'deltaLon': '-45.962', 'sigLon': '0.003251', 'sigLon_m': '0.0791', 'srcEht': 'N/A', 'destEht': 'N/A', 'sigEht': 'N/A', 'srcOrthoht': '1354.452', 'destOrthoht': '1355.236', 'sigOrthoht': '0.002', 'spcZone': 'CO S-0503', 'spcNorthing_m': '478,474.027', 'spcEasting_m': '1,022,903.594', 'spcNorthing_usft': '1,569,793.537', 'spcEasting_usft': '3,355,976.210', 'spcNorthing_ift': '1,569,796.676', 'spcEasting_ift': '3,355,982.921', 'spcConvergence': '00 45 36.35', 'spcScaleFactor': '0.99996861', 'spcCombinedFactor': 'N/A', 'utmZone': 'UTM Zone 13', 'utmNorthing': '4,231,038.653', 'utmEasting': '564,701.179', 'utmConvergence': '00 27 26.62', 'utmScaleFactor': '0.99965156', 'utmCombinedFactor': 'N/A', 'x': 'N/A', 'y': 'N/A', 'z': 'N/A', 'usng': '13SEC6470131038'}\n"
+      "{'ID': '1622144174440', 'nadconVersion': '5.0', 'vertconVersion': '3.0', 'srcDatum': 'NAD27', 'destDatum': 'NAD83(2011)', 'srcVertDatum': 'NGVD29', 'destVertDatum': 'NAVD88', 'srcLat': '38.2250000000', 'srcLatDms': 'N381330.00000', 'destLat': '38.2250061349', 'destLatDms': 'N381330.02209', 'deltaLat': '0.681', 'sigLat': '0.002757', 'sigLat_m': '0.0850', 'srcLon': '-104.2602777778', 'srcLonDms': 'W1041537.00000', 'destLon': '-104.2608026762', 'destLonDms': 'W1041538.88963', 'deltaLon': '-45.962', 'sigLon': '0.003251', 'sigLon_m': '0.0791', 'srcEht': 'N/A', 'destEht': 'N/A', 'sigEht': 'N/A', 'srcOrthoht': '1354.452', 'destOrthoht': '1355.236', 'sigOrthoht': '0.002', 'spcZone': 'CO S-0503', 'spcNorthing_m': '478,474.027', 'spcEasting_m': '1,022,903.594', 'spcNorthing_usft': '1,569,793.537', 'spcEasting_usft': '3,355,976.210', 'spcNorthing_ift': '1,569,796.676', 'spcEasting_ift': '3,355,982.921', 'spcConvergence': '00 45 36.35', 'spcScaleFactor': '0.99996861', 'spcCombinedFactor': 'N/A', 'utmZone': 'UTM Zone 13', 'utmNorthing': '4,231,038.653', 'utmEasting': '564,701.179', 'utmConvergence': '00 27 26.62', 'utmScaleFactor': '0.99965156', 'utmCombinedFactor': 'N/A', 'x': 'N/A', 'y': 'N/A', 'z': 'N/A', 'usng': '13SEC6470131038'}\n"
      ]
     }
    ],
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 11,
    "id": "df94a7c5-aa89-4e15-a02b-654c07c4bf80",
    "metadata": {},
    "outputs": [
@@ -303,7 +303,7 @@
        "1355.236"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 12,
    "id": "59d7b740-98b7-419e-b274-5ea3aaf2577e",
    "metadata": {},
    "outputs": [
@@ -324,7 +324,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,30 +335,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 14,
    "id": "d704987b-e60f-40a2-9b0d-250ab3eb24b4",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'false' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-102-47f725afbd49>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mdef\u001b[0m \u001b[0mgetGageDatum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgagenum\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0msi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnwis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_record\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msites\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mgagenum\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mservice\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'site'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0msi\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'alt_datum_cd'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'NGVD29'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#         print('conversion')\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0murl\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"https://www.ngs.noaa.gov/api/ncat/llh\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'false' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def getGageDatum(gagenum, verbose=false):\n",
+    "# The following function converts NGVD29 to NAVD88 if gage is in NGVD29 using NOAA NGS Vertcon service api\n",
+    "# https://www.ngs.noaa.gov/web_services/ncat/lat-long-height-service.shtml\n",
+    "\n",
+    "def getGageDatum(gagenum, verbose=False):\n",
     "    si = nwis.get_record(sites=gagenum, service='site')\n",
     "    if si['alt_datum_cd'].values[0] == 'NGVD29':\n",
     "#         print('conversion')\n",
     "        url = \"https://www.ngs.noaa.gov/api/ncat/llh\"\n",
     "        lat_str = 'lat_va'\n",
     "        lon_str = 'long_va'\n",
+    "\n",
     "        alt_str = 'alt_va'\n",
     "        indatum_str = 'coord_datum_cd'\n",
     "        outdatum_str = 'NAD83(2011)'\n",
@@ -372,9 +364,17 @@
     "        ohgt = float(si[alt_str].values[0])*.3048\n",
     "        repr(ohgt)\n",
     "        # print(lat=f'N{si[latstr].values[0]}'\n",
+    "        \n",
+    "        tmplonstr = si[lon_str].values[0]\n",
+    "#         print(tmplonstr, type(tmplonstr))\n",
+    "        if len(str(tmplonstr)) == 6:\n",
+    "#             print('adjust')\n",
+    "            tstr = '0'\n",
+    "            tmplonstr = (tstr + str(tmplonstr))\n",
+    "#             print(f'adjust lon:{tmplonstr}')\n",
     "        payload = {\n",
-    "            'lat':f'N{si[latstr].values[0]}',\n",
-    "            'lon':f'W{si[lon_str].values[0]}',\n",
+    "            'lat':f'N{si[lat_str].values[0]}',\n",
+    "            'lon':f'W{tmplonstr}',\n",
     "            'orthoHt': repr(ohgt),\n",
     "            'inDatum':indatum,\n",
     "            'outDatum':outdatum_str,\n",
@@ -385,6 +385,7 @@
     "        resp = r.json()\n",
     "        if verbose:\n",
     "            print(f'{si[indatum_str].values[0]}')\n",
+    "            print(f'payload: {payload}')\n",
     "            print(resp)\n",
     "        return float(resp['destOrthoht'])\n",
     "    else:\n",
@@ -394,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 15,
    "id": "2e4f4871-c907-4f17-94d4-e2f0cb5c362f",
    "metadata": {},
    "outputs": [
@@ -402,25 +403,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "conversion\n",
-      "NAD27\n",
-      "{'ID': '1620758734361', 'nadconVersion': '5.0', 'vertconVersion': '3.0', 'srcDatum': 'NAD27', 'destDatum': 'NAD83(2011)', 'srcVertDatum': 'NGVD29', 'destVertDatum': 'NAVD88', 'srcLat': '38.0136111111', 'srcLatDms': 'N380049.00000', 'destLat': '38.0136163999', 'destLatDms': 'N380049.01904', 'deltaLat': '0.587', 'sigLat': '0.003769', 'sigLat_m': '0.1162', 'srcLon': '-105.6922222222', 'srcLonDms': 'W1054132.00000', 'destLon': '-105.6927946683', 'destLonDms': 'W1054134.06081', 'deltaLon': '-50.270', 'sigLon': '0.012895', 'sigLon_m': '0.3146', 'srcEht': 'N/A', 'destEht': 'N/A', 'sigEht': 'N/A', 'srcOrthoht': '2548.128', 'destOrthoht': '2549.521', 'sigOrthoht': '0.028', 'spcZone': 'CO S-0503', 'spcNorthing_m': '454,308.770', 'spcEasting_m': '897,472.184', 'spcNorthing_usft': '1,490,511.356', 'spcEasting_usft': '2,944,456.657', 'spcNorthing_ift': '1,490,514.337', 'spcEasting_ift': '2,944,462.546', 'spcConvergence': '-00 07 05.72', 'spcScaleFactor': '0.99995029', 'spcCombinedFactor': 'N/A', 'utmZone': 'UTM Zone 13', 'utmNorthing': '4,207,552.226', 'utmEasting': '439,185.366', 'utmConvergence': '-00 25 36.01', 'utmScaleFactor': '0.99964555', 'utmCombinedFactor': 'N/A', 'x': 'N/A', 'y': 'N/A', 'z': 'N/A', 'usng': '13SDC3918507552'}\n",
       "2549.521\n",
-      "conversion\n",
-      "NAD27\n",
-      "{'ID': '1620758735107', 'nadconVersion': '5.0', 'vertconVersion': '3.0', 'srcDatum': 'NAD27', 'destDatum': 'NAD83(2011)', 'srcVertDatum': 'NGVD29', 'destVertDatum': 'NAVD88', 'srcLat': '39.3558333333', 'srcLatDms': 'N392121.00000', 'destLat': '39.3558240982', 'destLatDms': 'N392120.96675', 'deltaLat': '-1.025', 'sigLat': '0.002014', 'sigLat_m': '0.0621', 'srcLon': '-104.7627777778', 'srcLonDms': 'W1044546.00000', 'destLon': '-104.7633096293', 'destLonDms': 'W1044547.91467', 'deltaLon': '-45.841', 'sigLon': '0.004110', 'sigLon_m': '0.0984', 'srcEht': 'N/A', 'destEht': 'N/A', 'sigEht': 'N/A', 'srcOrthoht': '1874.520', 'destOrthoht': '1875.557', 'sigOrthoht': '0.009', 'spcZone': 'CO C-0502', 'spcNorthing_m': '474,066.997', 'spcEasting_m': '977,893.660', 'spcNorthing_usft': '1,555,334.807', 'spcEasting_usft': '3,208,306.115', 'spcNorthing_ift': '1,555,337.918', 'spcEasting_ift': '3,208,312.532', 'spcConvergence': '00 27 52.64', 'spcScaleFactor': '0.99994577', 'spcCombinedFactor': 'N/A', 'utmZone': 'UTM Zone 13', 'utmNorthing': '4,356,290.685', 'utmEasting': '520,392.396', 'utmConvergence': '00 09 00.34', 'utmScaleFactor': '0.99960512', 'utmCombinedFactor': 'N/A', 'x': 'N/A', 'y': 'N/A', 'z': 'N/A', 'usng': '13SED2039256290'}\n",
       "1875.557\n",
-      "conversion\n",
-      "NAD83\n",
-      "{'ID': '1620758737206', 'nadconVersion': '5.0', 'vertconVersion': '3.0', 'srcDatum': 'NAD83(2011)', 'destDatum': 'NAD83(2011)', 'srcVertDatum': 'NGVD29', 'destVertDatum': 'NAVD88', 'srcLat': '41.2277777778', 'srcLatDms': 'N411340.00000', 'destLat': '41.2277777778', 'destLatDms': 'N411340.00000', 'deltaLat': '0.000', 'sigLat': '0.000000', 'sigLat_m': '0.0000', 'srcLon': '-103.8930555556', 'srcLonDms': 'W1035335.00000', 'destLon': '-103.8930555556', 'destLonDms': 'W1035335.00000', 'deltaLon': '0.000', 'sigLon': '0.000000', 'sigLon_m': '0.0000', 'srcEht': 'N/A', 'destEht': 'N/A', 'sigEht': 'N/A', 'srcOrthoht': '1476.241', 'destOrthoht': '1476.981', 'sigOrthoht': '0.002', 'spcZone': 'NE-2600', 'spcNorthing_m': '162,164.195', 'spcEasting_m': '173,805.120', 'spcNorthing_usft': '532,033.698', 'spcEasting_usft': '570,225.631', 'spcNorthing_ift': '532,034.762', 'spcEasting_ift': '570,226.771', 'spcConvergence': '-02 34 47.70', 'spcScaleFactor': '0.99967031', 'spcCombinedFactor': 'N/A', 'utmZone': 'UTM Zone 13', 'utmNorthing': '4,564,633.742', 'utmEasting': '592,775.262', 'utmConvergence': '00 43 46.52', 'utmScaleFactor': '0.99970593', 'utmCombinedFactor': 'N/A', 'x': 'N/A', 'y': 'N/A', 'z': 'N/A', 'usng': '13TEF9277564633'}\n",
       "1476.981\n",
-      "conversion\n",
-      "NAD83\n",
-      "{'ID': '1620758737912', 'nadconVersion': '5.0', 'vertconVersion': '3.0', 'srcDatum': 'NAD83(2011)', 'destDatum': 'NAD83(2011)', 'srcVertDatum': 'NGVD29', 'destVertDatum': 'NAVD88', 'srcLat': '38.2201111111', 'srcLatDms': 'N381312.40000', 'destLat': '38.2201111111', 'destLatDms': 'N381312.40000', 'deltaLat': '0.000', 'sigLat': '0.000000', 'sigLat_m': '0.0000', 'srcLon': '-104.5359722222', 'srcLonDms': 'W1043209.50000', 'destLon': '-104.5359722222', 'destLonDms': 'W1043209.50000', 'deltaLon': '0.000', 'sigLon': '0.000000', 'sigLon_m': '0.0000', 'srcEht': 'N/A', 'destEht': 'N/A', 'sigEht': 'N/A', 'srcOrthoht': '1450.848', 'destOrthoht': '1451.677', 'sigOrthoht': '0.003', 'spcZone': 'CO S-0503', 'spcNorthing_m': '477,646.581', 'spcEasting_m': '998,816.856', 'spcNorthing_usft': '1,567,078.825', 'spcEasting_usft': '3,276,951.635', 'spcNorthing_ift': '1,567,081.959', 'spcEasting_ift': '3,276,958.189', 'spcConvergence': '00 35 28.73', 'spcScaleFactor': '0.99996803', 'spcCombinedFactor': 'N/A', 'utmZone': 'UTM Zone 13', 'utmNorthing': '4,230,339.026', 'utmEasting': '540,618.433', 'utmConvergence': '00 17 13.53', 'utmScaleFactor': '0.99962032', 'utmCombinedFactor': 'N/A', 'x': 'N/A', 'y': 'N/A', 'z': 'N/A', 'usng': '13SEC4061830339'}\n",
-      "1451.677\n",
-      "conversion\n",
-      "NAD83\n",
-      "{'error': 'Invalid longitude'}\n"
+      "1451.677\n"
      ]
     },
     {
@@ -430,8 +416,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-105-9d16578622ad>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mgages\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'08227500'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'06712000'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'06762500'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'381312104321001'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'01011000'\u001b[0m \u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mgage\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mgages\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgetGageDatum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-93-c9a2f5a1c0fc>\u001b[0m in \u001b[0;36mgetGageDatum\u001b[0;34m(gagenum)\u001b[0m\n\u001b[1;32m     32\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'{si[indatum_str].values[0]}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 34\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresp\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'destOrthoht'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     35\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0msi\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'alt_va'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m.3048\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-15-9d16578622ad>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mgages\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'08227500'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'06712000'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'06762500'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'381312104321001'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'01011000'\u001b[0m \u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mgage\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mgages\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgetGageDatum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-14-1085ab3d01cb>\u001b[0m in \u001b[0;36mgetGageDatum\u001b[0;34m(gagenum, verbose)\u001b[0m\n\u001b[1;32m     33\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'{si[indatum_str].values[0]}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 35\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresp\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'destOrthoht'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     36\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[0;31m#         print('non-conversion')\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mKeyError\u001b[0m: 'destOrthoht'"
      ]
     }
